first challenge finished

--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+ 
+    <!-- This is the title-->
+   
     <title>Grade Calculator</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -10,13 +20,13 @@
         <h1 class=" page-title">
             Avarage Grade Calculator
         </h1>
-        <p class=" page-subtitle">
+        <p class="page-subtitle">
             Find out your avarage grade for all your tests!
         </p>
-        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg" class="page-logo" alt="">
+        
 
     </div>
-    <a href="https://alura.com.br/" target="_blank">
-        <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt=" " class="alura-logo">
-    </a>
+
 </body>
+
+<script type="text/javascript" src="./script.js"></script>
